--- a/.circleci/ansible/configure-server.yml
+++ b/.circleci/ansible/configure-server.yml
@@ -13,11 +13,11 @@
     - name: "wait 600 seconds for target connection to become reachable/usable."
       # Your code here
       wait_for_connection:
-        timeout: 100
+        timeout: 600
 
     - name: "install python for Ansible."
       become: true
-      raw: test -e /usr/bin/python3 || (apt -y update && apt install -y python3)
+      raw: apt install -y python3
       changed_when: false
 
   roles:
