--- a/.circleci/ansible/roles/deploy/tasks/main.yml
+++ b/.circleci/ansible/roles/deploy/tasks/main.yml
@@ -1,53 +1,19 @@
+---
+- name: "upgrade packages"
+  become: yes
+  apt:
+    upgrade: "yes"
+
 - name: "Copy compiled backend app"
   become: true
   copy:
-    src: /root/project/artifact.tar.gz
+    src: ~/project/backend.tar.gz
     dest: /home/ubuntu
 
-- name: "Unzip backend files to correct directory"
-
-  shell: |
-      cd /home/ubuntu
-      tar -xzvf artifact.tar.gz -C .
-      rm -rf artifact.tar.gz
-
-# - name: "Copy compiled backend app"
-#   become: true
-#   copy:
-#     src: package.json
-#     dest: /home/ubuntu/dist
-
-- name: "Install dependencies for project"
-  shell: |
-    cd /home/ubuntu/dist
-    npm install
-    npm run build
-
-- name: "install pm2"
-  become: true
-  npm:
-    name: pm2
-    global: yes
-    production: yes
-    state: present   
-
-- name: "Executing node"
-  shell: |
-    cd /home/ubuntu/dist 
-    export ENVIRONMENT=production
-    export NODE_ENV=production
-    export TYPEORM_HOST="{{ lookup('env', 'TYPEORM_HOST') }}"
-    export TYPEORM_ENTITIES=/home/ubuntu/dist/modules/domain/**/*.entity.js
-    export TYPEORM_USERNAME="{{ lookup('env', 'TYPEORM_USERNAME') }}"
-    export TYPEORM_PASSWORD="{{ lookup('env', 'TYPEORM_PASSWORD') }}"
-    export TYPEORM_DATABASE="{{ lookup('env', 'TYPEORM_DATABASE') }}"
-  register: execute_node
-
-# - name: print message
-#   debug:
-#     msg: "{{ execute_node.stdout_lines }}"
-
-- name: "Set pm2 start as service"
+- name: "Build artifact"
   become: yes
   shell: |
-    env PATH=$PATH:/usr/local/bin pm2 startup -u ubuntu
+    cd backend
+    npm install
+    npm run migrations
+    pm2 start --name "backend" npm -- start
