--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,8 +36,8 @@ commands:
           when: on_fail
           command: |
             aws s3 rm s3://udapeople-<<parameters.workflow_id>> --recursive
-            aws cloudformation delete-stack --stack-name udapeople-backendstack-<<parameters.workflow_id>>
-            aws cloudformation delete-stack --stack-name udapeople-frontendstack-<<parameters.workflow_id>>
+            aws cloudformation delete-stack --stack-name udapeople-backend-<<parameters.workflow_id>>
+            aws cloudformation delete-stack --stack-name udapeople-frontend-<<parameters.workflow_id>>
       - run:
           name: Destroy Promotion Stack
           when: on_fail
@@ -227,7 +227,9 @@ jobs:
               cat .circleci/ansible/inventory.txt
               ls ~/project/.circleci/ansible/
               cat ~/project/.circleci/ansible/inventory.txt
-              yum -y install tar gzip jq npm          
+              yum install -y tar
+              yum install -y gzip
+              yum install -y curl          
         - persist_to_workspace:
             root: ~/
             paths:
@@ -380,10 +382,6 @@ jobs:
             echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
             echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
             echo NODE_ENV=production >> "backend/.env"
-      
-      - run:
-          name: Compress Backend
-          command: |
             tar cvzf backend.tar.gz backend
 
       - run:
