--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -371,12 +371,13 @@ jobs:
             echo TYPEORM_MIGRATIONS=./src/migrations/*.ts >> "backend/.env"
             echo TYPEORM_MIGRATIONS_DIR=./src/migrations >> "backend/.env"
             echo NODE_ENV=production >> "backend/.env"
-            tar cvzf backend.tar.gz backend
+            # tar cvzf backend.tar.gz backend
+            tar -C backend -czvf backend.tar.gz .
 
       - run:
           name: Deploy Backend
           command: |
-            ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/deploy-backend.yml
+            ANSIBLE_HOST_KEY_CHECKING=False ansible-playbook -i .circleci/ansible/inventory.txt .circleci/ansible/deploy-backend.yml
       # Here's where you will add some code to rollback on failure 
       - destroy-environment:
           workflow_id: "${CIRCLE_WORKFLOW_ID}"
